[package]
name = "compiler_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales"] }
itertools = { version = "0.10" }
rand = { version = "0.8" }

[[bin]]
name = "logging"
path = "src/main2.rs"

[[bin]]
name = "acl"
path = "src/main3.rs"

[[bin]]
name = "fault"
path = "src/main4.rs"
